Add security for storage service endpoints